--- a/.github/workflows/selenium-webdriver.yml
+++ b/.github/workflows/selenium-webdriver.yml
@@ -19,4 +19,29 @@ jobs:
               uses: actions/setup-dotnet@v3
               with:
                 dotnet-version: '6.0.x'
-            -name
+            - name: Install Chrome
+              run: |
+                sudo apt-get update
+                sudo apt-get install -y google-Chrome
+            - name: Install dependencies
+              run dotnet restore SeleniumBasicExercise.sln
+            - name: build
+              run: dotnet build SeleniumBasicExercise.sln --no-restore
+            - name: Run TestProject1 tests
+              env:
+                CHROMEWEBDRIVER: /usr/bin/google-Chrome
+              run: |
+                echo "Running TestProject1 tests"
+                dotnet test TestProject1/TestProject1.csproj --verbosity normal
+            - name: Run TestProject2 tests
+              env:
+                CHROMEWEBDRIVER: /usr/bin/google-Chrome
+              run: |
+                echo "Running TestProject2 tests"
+                dotnet test TestProject2/TestProject2.csproj --verbosity normal
+            - name: Run TestProject3 tests
+              env:
+                CHROMEWEBDRIVER: /usr/bin/google-Chrome
+              run: |
+                echo "Running TestProject3 tests"
+                dotnet test TestProject3/TestProject3.csproj --verbosity normal
