--- a/.github/workflows/selenium-webdriver.yml
+++ b/.github/workflows/selenium-webdriver.yml
@@ -24,7 +24,7 @@ jobs:
                 sudo apt-get update
                 sudo apt-get install -y google-Chrome
             - name: Install dependencies
-              run dotnet restore SeleniumBasicExercise.sln
+              run: dotnet restore SeleniumBasicExercise.sln
             - name: build
               run: dotnet build SeleniumBasicExercise.sln --no-restore
             - name: Run TestProject1 tests
