--- a/.github/workflows/selenium-webdriver.yml
+++ b/.github/workflows/selenium-webdriver.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Install Chrome
               run: |
                 sudo apt-get update
-                sudo apt-get install -y google-Chrome
+                sudo apt-get install -y google-chrome
             - name: Install dependencies
               run: dotnet restore SeleniumBasicExercise.sln
             - name: build
